--- a/styles/globals.css
+++ b/styles/globals.css
@@ -303,114 +303,21 @@ body {
 }
 
 .slider {
-  position: relative;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 90vw;
+  height: 90vh;
 }
 
-.slider .status {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  display: flex;
-}
-
-.slider .status .point {
-  position: absolute;
-  width: 14px;
-  height: 14px;
-  top: -2px;
-  background-color: #ff0;
-  border-radius: 50%;
-  z-index: 15;
-  transition: left 500ms ease-in-out;
-}
-
-.slider .status .point[data-current="0"] {
-  left: 4px;
-}
-
-.slider .status .point[data-current="1"] {
-  left: 24px;
-}
-
-.slider .status .point[data-current="2"] {
-  left: 44px;
-}
-
-.slider .status .point[data-current="3"] {
-  left: 64px;
-}
-
-.slider .status .point[data-current="4"] {
-  left: 84px;
-}
-
-.slider .status .point[data-current="5"] {
-  left: 104px;
-}
-
-.slider .status .stat {
-  width: 10px;
-  height: 10px;
-  background-color: transparent;
-  border-radius: 50%;
-  z-index: 20;
-  margin: 0px 5px;
-  border: 1px solid #fff;
-}
-
-.slider .status .stat.current {
-  background-color: #fff;
-}
-
-.slider .text {
-  position: absolute;
-  color: #fff;
-  z-index: 20;
-  transform-origin: right top;
-  transform: rotate(-90deg) translateY(calc(-88vh));
-  display: grid;
-  grid-template-columns: 90vh;
-  grid-template-rows: 1fr;
-  text-transform: uppercase;
-}
-
-.slider .text div {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  opacity: 0;
-}
-
-.slider .text div.current {
-  opacity: 0.7;
-}
-
-.slider img {
+.slider .img {
   object-fit: cover;
   object-position: center center;
-  width: 100%;
-  height: 100%;
+  width: 90vw;
+  height: 90vh;
   display: block;
 }
 
-.slider .image {
-  width: 100%;
-  margin-right: -100%;
-  opacity: 0;
-  overflow: hidden;
-  transform: translateY(0) scale(1.2);
-  z-index: 1;
-}
-
-.slider .image.current {
-  z-index: 10;
-  transform: translateY(0) scale(1);
-  opacity: 1;
+.image {
+  width: 90vw;
+  height: 90vh;
 }
 
 .btn-color {
@@ -424,7 +331,6 @@ body {
 
 .anim {
   width: 100%;
-  overflow: hidden;
 }
 
 @keyframes slide-left {
