--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,49 @@ body {
   }
 }
 
+
+.shimmer1 {
+  text-align: center;
+  color: rgb(65, 28, 14, 0.1);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#e87f59),
+    to(#ad2e00),
+    color-stop(0.5, #fff)
+  );
+  background: gradient(
+    linear,
+    left top,
+    right top,
+    from(#e87f59),
+    to(#ad2e00),
+    color-stop(0.1, #fff)
+  );
+  background-size: 125px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: shimmer1 5s infinite;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-color: #e87f59;
+}
+
+@keyframes shimmer1 {
+  0% {
+    background-position: top left;
+  }
+
+  50% {
+    background-position: top right;
+  }
+
+  100% {
+    background-position: top left;
+  }
+}
+
 .clubitem {
   animation: dropin 0.35s;
 }
@@ -985,4 +1028,25 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   color: black !important;
+}
+
+#containe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+#navBar {
+  width: 100vw;
+  height: 70px;
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3))!important;
+  transition: 0.2s;
+  display: flex;
+}
+
+.floatingNav {
+  width: calc(100vh - 100px); 
+  border-radius: 2px;
+  box-shadow: 0px 1px 10px #999;
 }
