--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,6 +76,34 @@ body {
 }
 
 
+.shimmers {
+  color: rgb(65, 28, 14, 0.1);
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(#411c0e),
+    to(#411c0e),
+    color-stop(0.5, #fff)
+  );
+  background: gradient(
+    linear,
+    left top,
+    right top,
+    from(#411c0e),
+    to(#411c0e),
+    color-stop(0.1, #fff)
+  );
+  background-size: 125px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: shimmer 5s infinite;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-color: rgba(65, 28, 14, 0.8);
+}
+
+
 .shimmer1 {
   text-align: center;
   color: rgb(65, 28, 14, 0.1);
@@ -1049,4 +1077,30 @@ body {
   width: calc(100vh - 100px); 
   border-radius: 2px;
   box-shadow: 0px 1px 10px #999;
+}
+
+.contacthead:after{
+  background-color: #f0af2d;
+  bottom: -10px;
+  height: 2px;
+  width: 40px;
+  position: relative;
+  display: block;
+}
+
+.glow {
+  color: #fff;
+  text-align: center;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
 }
