--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1033,7 +1033,8 @@ body {
 }
 
 .bxl {
-  background: "linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7))";
+  background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3));
+  color: white !important;
 }
 
 .centered {
