--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1088,3 +1088,11 @@ body {
   position: relative;
   display: block;
 }
+
+.clubimage {
+  transition: all .2s ease-in-out;
+}
+
+.clubimage:hover {
+  transform: scale(1.2);
+}
